# periodic_tasks_utils

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/periodic_tasks_api/: crontab.py  filters.py  models.py  periodic_task.py  schedulers.py  serializers.py  urls.py  utils.py  views.py
src/periodic_tasks_api/management/commands/: get_or_create_periodic_tasks.py
src/periodic_tasks_api/migrations/: 0001_initial.py  0002_auto_20211028_0728.py
src/periodic_tasks_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
