[metadata]
name = "periodic_tasks_utils"
version = "1.0.0"
description = "Utils that allow to control periodic tasks for django-celery-beat."
author = MINT
author_email = *@mint.ai
url = https://bitbucket.org/myntelligence_v2/periodic_tasks_utils/
project_urls =
    Bug Tracker = https://bitbucket.org/myntelligence_v2/periodic_tasks_utils/
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src